--- a/client/src/assets/style/Login.css
+++ b/client/src/assets/style/Login.css
@@ -3,7 +3,9 @@ body {
   background-color:white;
  
 }
-
+.loginpage{
+  width: 100%;
+}
 .container1 {
   display: flex;
   align-items: center;
@@ -86,6 +88,7 @@ body {
   font-size: 14.5px;
   text-align: center;
   margin: 20px 0 15px;
+  
 }
 
 .register-link1 p a {
@@ -137,7 +140,7 @@ body {
 
 .contain_both_img {
   width: 500px;
-  height: 520px;
+  height: 511px;
   /* border-radius: 5px;*/
  position: relative;
  left: 150px;
