--- a/client/src/assets/style/Admin.css
+++ b/client/src/assets/style/Admin.css
@@ -1,5 +1,71 @@
-.Admin_Container{
+.Admin_Container {
          display: flex;
          flex-direction: column;
 
+}
+
+#admin_h2 {
+         text-align: center;
+         font-size: 2rem;
+         font-weight: bold;
+         color: #1f2937;
+         margin: 2rem 0;
+}
+
+.input-box {
+         display: block;
+         width: 100%;
+         font-size: 1.25rem;
+         font-weight: 600;
+         background-color: transparent;
+         border: none;
+         border-bottom: 2px solid #3b82f6;
+         padding: 0.5rem;
+         outline: none;
+         transition: border-color 0.3s ease;
+}
+
+.input-box:focus {
+         border-color: #1d4ed8;
+}
+
+.save_button {
+         background-color: #4caf50;
+         color: white;
+         padding: 0.5rem 1rem;
+         border: none;
+         border-radius: 0.25rem;
+         cursor: pointer;
+         transition: background-color 0.3s ease;
+}
+
+.save_button:hover {
+         background-color: #45a049;
+}
+
+.cancel_button {
+         background-color: #f44336;
+         color: white;
+         padding: 0.5rem 1rem;
+         border: none;
+         border-radius: 0.25rem;
+         cursor: pointer;
+         transition: background-color 0.3s ease;
+}
+
+.cancel_button:hover {
+         background-color: #e53935;
+
+}
+
+.profile_image {
+         width: 100px;
+         height: 100px;
+         border-radius: 50%;
+         overflow: hidden;
+         transition: transform 0.3s ease;
+}
+
+.profile_image:hover {
+         transform: scale(1.1);
 }
