--- a/client/src/assets/style/UserProfile.css
+++ b/client/src/assets/style/UserProfile.css
@@ -166,6 +166,9 @@
 .save-btn:hover {
   background-color: #6d28d9;
 }
+.admin-profile{
+  margin: 0px 20px;
+}
 
 /* Mobile */
 @media (max-width: 480px) {
