--- a/client/src/assets/style/Practice.css
+++ b/client/src/assets/style/Practice.css
@@ -1,5 +1,3 @@
-
-
 /* Filter */
 .filter-wrapper {
   text-align: right;
@@ -45,17 +43,6 @@
   display: grid;
   gap: 1.5rem;
   grid-template-columns: 1fr;
-}
-
-@media (min-width: 640px) {
-  .card-grid {
-    grid-template-columns: repeat(2, 1fr);
-  }
-}
-@media (min-width: 1024px) {
-  .card-grid {
-    grid-template-columns: repeat(3, 1fr);
-  }
 }
 
 /* Cards */
@@ -201,7 +188,7 @@
 /* Mobile Tweaks */
 @media screen and (max-width: 640px) {
   .Practice-buttons {
-    flex-direction: column;
+    flex-direction: row;
   }
 
   .view-button,
@@ -211,12 +198,12 @@
 
   .card-header,
   .card-information {
-    flex-direction: column;
+    flex-direction: row;
     align-items: flex-start;
   }
 
   .progress-container {
-    flex-direction: column;
+    flex-direction: row;
     align-items: flex-start;
   }
 
@@ -234,3 +221,18 @@
     width: 100%;
   }
 }
+
+/* Tablet */
+@media (min-width: 640px) and (max-width: 1024px) {
+  .card-grid {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+/* Laptop */
+@media (min-width: 1024px) {
+  .card-grid {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
